[gd_scene load_steps=7 format=2]

[ext_resource path="res://util/message_display.gd" type="Script" id=1]
[ext_resource path="res://graphics/avatars/ai_neutral.png" type="Texture" id=2]
[ext_resource path="res://fonts/RobotoMono-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/RobotoMono-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[node name="MessageDisplay" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Container" type="Node2D" parent="."]

[node name="Overlay" type="ColorRect" parent="Container"]
margin_top = 200.0
margin_right = 1024.0
margin_bottom = 400.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.352941 )

[node name="MessageBox" type="ColorRect" parent="Container"]
margin_left = 130.0
margin_top = 220.0
margin_right = 894.0
margin_bottom = 380.0
mouse_filter = 2
color = Color( 0.403922, 0.415686, 0.482353, 1 )

[node name="AvatarContainer" type="ColorRect" parent="Container/MessageBox"]
margin_left = 10.0
margin_top = 10.0
margin_right = 140.0
margin_bottom = 150.0
mouse_filter = 2
color = Color( 0.737255, 0.737255, 0.737255, 1 )

[node name="AvatarBG" type="ColorRect" parent="Container/MessageBox/AvatarContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 125.0
margin_bottom = 135.0
mouse_filter = 2
color = Color( 0.243137, 0.254902, 0.34902, 1 )

[node name="Sprite" type="Sprite" parent="Container/MessageBox/AvatarContainer"]
position = Vector2( 65, 65 )
scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 2 )

[node name="LabelBG" type="ColorRect" parent="Container/MessageBox/AvatarContainer"]
margin_left = 5.0
margin_top = 110.0
margin_right = 125.0
margin_bottom = 135.0
mouse_filter = 2
color = Color( 0.611765, 0.611765, 0.611765, 1 )

[node name="AvatarLabel" type="Label" parent="Container/MessageBox/AvatarContainer/LabelBG"]
margin_right = 120.0
margin_bottom = 25.0
text = "AI.2ND.CHANCE"
align = 1
valign = 1

[node name="MessageContainer" type="ColorRect" parent="Container/MessageBox"]
margin_left = 160.0
margin_top = 20.0
margin_right = 750.0
margin_bottom = 140.0
mouse_filter = 2
color = Color( 0.737255, 0.737255, 0.737255, 1 )

[node name="MessageLabel" type="RichTextLabel" parent="Container/MessageBox/MessageContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 580.0
margin_bottom = 110.0
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[color=#202020]Incoming alert. The following species has been annihilated: [b][color=#a00060]Human[/color][/b].

(Click or tap to continue.)[/color]"
text = "Incoming alert. The following species has been annihilated: Human.

(Click or tap to continue.)"
